cli/tests/snapshot/inputs/errors/destructuring_nonexistent_idents.ncl
# capture = 'stderr'
# command = ['eval']
(
  let { a, b } = { a = 1, c = 2 } in
  a: Number
): _
